# resilient-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API_CONTRACT_AUDIT.md  BLENDED_FINANCE_FEATURE.md  BLENDED_FINANCE_SUMMARY.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_SETUP.md  CLIMATE_TIMELAPSE_FEATURE.md  DALY_FEATURE_SUMMARY.md  Dockerfile  ENERGY_GRID_RESILIENCE_FEATURE.md  EXACT_PYDANTIC_MODELS.py  EXECUTIVE_SUMMARY_API_AUDIT.md  FRONTEND_API_QUICK_REFERENCE.md  GRID_RESILIENCE_SUMMARY.md  HEALTH_COOLING_FEATURE.md  INTERVENTION_ROUTING_FIX.md  MACROECONOMIC_SUPPLY_CHAIN_FEATURE.md  NLG_AGRICULTURE_INTERVENTION_UPDATE.md  NLG_FEATURE_SUMMARY.md  NLG_INTERVENTION_EXTRACTION_FIX.md  NLG_INTERVENTION_NAME_FIX.md  NLG_NESTED_EXTRACTION_FIX.md  PRICE_SHOCK_CODE_SUMMARY.md  PRICE_SHOCK_FEATURE.md  Procfile  QUICK_START_CI_CD.md  QUICK_START_SUPPLY_CHAIN.md  ROUTE_RISK_CHECKLIST.md  ROUTE_RISK_IMPLEMENTATION_SUMMARY.md  SOVEREIGN_RISK_FEATURE.md  SUPPLY_CHAIN_CASCADE_FEATURE.md  SUPPLY_CHAIN_DYNAMIC_UPGRADE.md  VALIDATION_REPORT.md  adaptation_engine.py  ag_surrogate.pkl  api.py  auth.py  backtest_orchestrator.py  (+83 more)
.github/: dependabot.yml
data/: industry_benchmarks.csv
docs/: EXECUTIVE_SUMMARY_NLG.md  HEALTH_COOLING_INTERVENTION.md  HEALTH_DALY_PUBLIC_SECTOR.md  HEALTH_ENDPOINT_DATA_CONTRACT.md  HEALTH_ENDPOINT_QUICK_REFERENCE.md  INFRASTRUCTURE_STRESS_TESTING.md  PRICE_SHOCK_ENGINE.md
examples/: price_shock_examples.py  sample_supply_chain.csv  supply_chain_cascade_examples.md
routers/: _shared.py  agriculture.py  ai.py  coastal.py  compliance.py  delta.py  export.py  finance.py  flood.py  forecast.py  health.py  macro.py  network.py  opportunities.py  osint.py  portfolio.py  prediction.py  simulation.py  spatial.py  supply_chain.py
templates/: investor_report.html  tcfd_report.html
tests/: TEST_ALL_ENDPOINTS.sh  test_agri_roi.py  test_agriculture_nlg.py  test_api_comparison.py  test_api_flow.py  test_before_after.py  test_calculate_financials_endpoint.py  test_chart_data.py  test_coastal_api.py  test_coastal_engine.py  test_coastal_flood_endpoint.py  test_coastal_flood_nlg.py  test_coastal_flood_spatial.py  test_coastal_logic.py  test_coastal_surrogate.py  test_cors_fix.py  test_daly_calculation.py  test_final_coastal_fix.py  test_financial_engine.py  test_flash_flood.py  test_flash_flood_analytics.py  test_flash_flood_endpoint.py  test_flash_flood_spatial_final.py  test_flood_comprehensive.py  test_flood_endpoint.py  test_flood_frequency.py  test_flood_logic.py  test_flood_value_protected.py  test_full_integration.py  test_gee_logic.py  test_grid_resilience_unit.py  test_headless.py  test_health_cooling_api.sh  test_health_cooling_intervention.py  test_health_engine.py  test_hospital_expansion_nlg.py  test_inference.py  test_infrastructure_engine.py  (+24 more)
(+34 files in other folders)
